--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cryptiles": "^4.1.2",
     "firebase": "^4.8.1",
     "hoek": "^5.0.4",
+    "lodash": "^4.17.11",
+    "macaddress": "^0.2.9",
     "node": "^9.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "router": "^1.3.2"
+    "router": "^1.3.2",
+    "sshpk": "^1.14.2",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
